--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,15 @@ name = "furnace"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+doctest = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rand = "*"
 termion = "*"
+derive_builder = "*"
 
 [dev-dependencies]
 pretty_assertions = "*"
-
-
-[lib]
-doctest = false
